cswap/src/snapshots/cswap__parser__tests__av_snap.snap
---
source: cswap/src/parser.rs
expression: "av(\"ASSERTION VIOLATION\n                File: ../src/qe/qsat.cpp\n                Line: 631\n                validate_defs(\\\"check_sat\\\")\n                (C)ontinue, (A)bort, (S)top, (T)hrow exception, Invoke (G)DB\")"
---
Ok(
    (
        "",
        "File: ../src/qe/qsat.cpp\n                Line: 631\n                validate_defs(\"check_sat\")\n                (C)ontinue, (A)bort, (S)top, (T)hrow exception, Invoke ",
    ),
)
