cswap/src/snapshots/cswap__parser__tests__cvc4_model2_as_output_snap.snap
---
source: cswap/src/parser.rs
expression: model(response)
---
Ok(
    (
        "",
        [
            (
                Token(
                    "s",
                ),
                [],
                Str,
                Constant(
                    RefCell {
                        value: Str(
                            "j",
                        ),
                    },
                ),
            ),
        ],
    ),
)
