cswap/src/snapshots/cswap__parser__tests__decl_fn_snap.snap
---
source: cswap/src/parser.rs
expression: df.unwrap().1
---
DeclFn(
    Token(
        "x33",
    ),
    [],
    UserDef(
        "Bool",
    ),
)
