cswap/src/snapshots/cswap__parser__tests__decl_fn_with_args_snap.snap
---
source: cswap/src/parser.rs
expression: df.unwrap().1
---
DeclFn(
    Token(
        "f13",
    ),
    [
        UserDef(
            "S7",
        ),
        UserDef(
            "S6",
        ),
    ],
    Dec,
)
