cswap/src/snapshots/cswap__parser__tests__decl_snap.snap
---
source: cswap/src/parser.rs
expression: df.unwrap().1
---
GenericDecl(
    "declare-datatypes",
    [
        [
            "NodeMobile ",
        ],
        [
            "(",
            "(",
            "Rnode",
            ")",
            ")",
        ],
    ],
)
