cswap/src/snapshots/cswap__parser__tests__equant.snap
---
source: cswap/src/parser.rs
expression: r
---
(
    "",
    Commands(
        [
            RefCell {
                value: Assert(
                    RefCell {
                        value: QExists(
                            [
                                (
                                    RefCell {
                                        value: Token(
                                            "ah",
                                        ),
                                    },
                                    RefCell {
                                        value: Dec,
                                    },
                                ),
                            ],
                            RefCell {
                                value: BExp(
                                    RefCell {
                                        value: Equals,
                                    },
                                    [
                                        RefCell {
                                            value: Symbol(
                                                RefCell {
                                                    value: Token(
                                                        "ah",
                                                    ),
                                                },
                                            ),
                                        },
                                        RefCell {
                                            value: Constant(
                                                RefCell {
                                                    value: UInt(
                                                        "4",
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ),
                    },
                ),
            },
        ],
    ),
)
