cswap/src/snapshots/cswap__parser__tests__fn_define_rec_snap.snap
---
source: cswap/src/parser.rs
expression: df
---
(define-fun-rec app ((l1 Lst) (l2 Lst)) Lst (ite ((_ is nil) l1) l2 (cons (head l1) (app (tail l1) l2))))
