cswap/src/snapshots/cswap__parser__tests__fp_op_inference_snap.snap
---
source: cswap/src/parser.rs
expression: fpsort
---
Some(
    (
        "11",
        "53",
    ),
)
